<resources>
    <string name="app_name">where2</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="signup">  Signup!</string>
    <string name="no_account_yet">No account yet?</string>
    <string name="password">password</string>
    <string name="password_capital">Password</string>
    <string name="email_address">Email address:</string>
    <string name="email_example">email@abc.com</string>
    <string name="login_title_text">Login to your where2 account!</string>
    <string name="header_via_existing_acc">…or use your existing account!</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="login">Login</string>
    <string name="safe_login">Safe Login</string>
    <string name="title_activity_welcome">WelcomeActivity</string>

    <string name="my_google_api_key">AIzaSyDJwo248qnVnalWoobX8rPkxX0C-MGht_4</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    <string name="permission_required_toast">Location permission is required for this demo.</string>

    <string-array name="hours_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
</resources>